# pep750-examples

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test.yml
pep/: __init__.py  aformat.py  afstring.py  format.py  fstring.py  lazy.py  logging.py  reuse.py  test.py  test_aformat.py  test_afstring.py  test_format.py  test_fstring.py  test_impl.py  test_lazy.py  test_logging.py  test_reuse.py  test_web.py  web.py
scripts/: check.sh
