[project]
name = "pep750_examples"
version = "0.0.1"
description = "Collection of examples referenced by PEP 750."
requires-python = ">=3.14"

[tool.pytest.ini_options]
python_files = ["test_*.py", "test.py"]
asyncio_mode = "auto"
testpaths = ["pep"]
filterwarnings = ["ignore::DeprecationWarning"]
asyncio_default_fixture_loop_scope = "function"

[tool.isort]
profile = "black"
multi_line_output = 3

